# openblas-libs

./: .gitignore  .gitmodules  .travis.yml  0001-Fix-gcc-version-checks-erroneously-excluding-clang.patch  CHANGELOG.md  LICENSE.txt  README.md  _appveyor.yml  appveyor.yml  build-openblas.sh  build_openblas.ps1  build_steps.sh  ci-before-build.sh  ci-repair-wheel.sh  ci-test.sh  github_commit.txt  manylinux-compile.patch  openblas_commit.txt  patch_code.sh  pyproject.toml  setup.py  test.f90  test64_.f90
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  checks.yml  multibuild.yml  posix.yml  publish.yml  wheel.yml  windows-arm.yml  windows.yml
appveyor/: build_gfortran.sh  build_openblas.sh  upload_to_anaconda_staging.sh
local/openblas/: __init__.py  __main__.py
local/scipy_openblas64/: __init__.py  __main__.py
objconv/: LICENSE.txt  sort-zipfile.py
patches/: 0001-Fix-missing-support-for-HFLOAT16-in-Windows-symbol-r.patch  0001-backout-PR-4741.patch  0001-build-a-single-shared-object.patch  0001-create-a-single-shared-object.patch  0001-debug-cruft.patch  0001-do-not-add-LIBNAMESUFFIX-to-dylib.patch  0001-fix-soname.patch  0001-use-blasint-in-tests  0002-do-not-add-LIBNAMESUFFIX-to-so.patch  extern.patch  extern_arm64.patch  extern_asm_hidden.patch  float_in_scal.patch  lapacke-makefile.patch  openblas-make-libs.patch  remove-lock-around-thread-shutdown.patch  report_GEMM.patch  use_generics.patch
patches-windows/: openblas-make-libs.patch  revert-win-threading.patch
scripts/: fuse_openblas.py
src/: _init_openblas.c
tools/: LICENSE_linux.txt  LICENSE_osx.txt  LICENSE_win32.txt  build_gfortran.sh  build_objconv.sh  build_openblas.ps1  build_openblas.sh  build_prepare.sh  build_prepare_wheel.sh  build_steps.sh  build_steps_win_arm64.bat  build_steps_windows.sh  build_wheel.sh  build_wheel_prepare_for_win.sh  build_wheel_winbash.sh  docker_build_wrap.sh  download-wheels.py  gfortran_utils.sh  local_build.sh  prepare_local.bat  repair_for_win.sh  repair_for_win_arm64.bat  sha256sum.py  test_for_win.sh  update_changelog.sh  upload_to_anaconda_posix.sh  upload_to_anaconda_staging.sh  windows_build.bat
travis-ci/: build_steps.sh  build_wheel.sh  docker_build_wrap.sh
