[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "scipy-openblas64"
# v0.3.27-333-gfb7c53c5
version = "0.3.27.333.0"
requires-python = ">=3.7"
description = "Provides OpenBLAS for python packaging"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: OSI Approved :: BSD License",
]
# authors = [
# ]
# maintainers = [
# ]
license = {file = "LICENSE.txt"}

[project.urls]
homepage = "https://github.com/MacPython/openblas-libs"
upstream = "https://github.com/xianyi/OpenBLAS"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

[options]
install_requires = "importlib-metadata ~= 1.0 ; python_version < '3.8'"

[tool.setuptools.package-data]
scipy_openblas64 = ["lib/*", "include/*", "lib/pkgconfig/*", "lib/cmake/openblas/*"]
