[build-system]
# Minimum requirements for the build system to execute.
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "scipy-openblas64"
# v0.3.30-349-gf6df9beb
version = "0.3.30.349.1"
requires-python = ">=3.7"
description = "Provides OpenBLAS for python packaging"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Programming Language :: C++",
  "License :: OSI Approved :: BSD License",
]
# authors = [
# ]
# maintainers = [
# ]
license = {file = "LICENSE.txt"}

[project.urls]
homepage = "https://github.com/MacPython/openblas-libs"
upstream = "https://github.com/OpenMathLib/OpenBLAS"

[tool.setuptools.packages.find]
# scanning for namespace packages is true by default in pyproject.toml, so
# # you do NOT need to include the following line.
namespaces = true
where = ["local"]

[options]
install_requires = "importlib-metadata ~= 1.0 ; python_version < '3.8'"

[tool.setuptools.package-data]
scipy_openblas64 = ["lib/*", "include/*", "lib/pkgconfig/*", "lib/cmake/openblas/*"]

[tool.cibuildwheel]
before-build = "bash ci-before-build.sh"
repair-wheel-command = "bash ci-repair-wheel.sh {dest_dir} {wheel}"
test-command = "cd {package} && bash ci-test.sh "
environment-pass = [
  "OPENBLAS_COMMIT",
  "NIGHTLY",
  "MB_ML_LIBC",
  "MB_ML_VER",
  "INTERFACE64",
  "BUILD_DIR",
  "PLAT",
  "OS-NAME",
]
